src/main/resources/static/css/style.css
.button{background-color:orange}

h1 { color: #0f1e3e; font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace; font-size: 54px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 54px; }
.subtitle-text { color: #2a58bb; font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace; font-size: 25px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 25px; }
h2 { font-family: Arial, monospace; font-size: 25px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 25px; }
blockquote { font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace; font-size: 21px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 30px; }
pre { font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace; font-size: 13px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 18.5714px; }
.btn-text { color: #007bff; font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace; font-size: 25px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 20px; }
.carousel-text-light { color: #eaeffa; font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace; font-style: normal; font-variant: normal; font-weight: 700; line-height: 15.4px; }
.carousel-text-dark { color: #2a58bb; font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace; font-style: normal; font-variant: normal; font-weight: 700; line-height: 15.4px; }
.header-title { color: #eaeffa; font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace; font-size: 30px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 15.4px; }
.header-text { float: right; text-align:right; color: #eaeffa; font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace; font-size: 15px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 15.4px; }
.footer-text {   text-decoration: none; color: #000000; font-family: Arial, "Helvetica Neue", Helvetica, sans-serif; font-size: 17px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 22px; }
.hyperlink-text { font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace; font-size: 18px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 20px; }

.paragraph-text {font-family: Arial; font-size: 18px }

.header-btn-container-l{
    float:left
}

.header-btn-container-r{
    float:right
}

.center-button{
  display: flex;
  justify-content: center;
}

div.hidden
{
   display: none;
}


textarea{
    width: 75%;
    height: 200px;
}

select{
        display: block;
    width: 75%;
        height: calc(1.5em + .75rem + 2px);
        padding: .375rem .75rem;
        font-size: 1rem;
        font-weight: 400;
        line-height: 1.5;
        color: #495057;
        background-color: #fff;
        background-clip: padding-box;
        border: 1px solid #ced4da;
        border-radius: .25rem;
        transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
        transition-property: border-color, box-shadow;
        transition-duration: 0.15s, 0.15s;
        transition-timing-function: ease-in-out, ease-in-out;
        transition-delay: 0s, 0s;
}

.file-col-width{
    width: 350px;
}

.footer-image {
    height: 50px;
    width: 50px;
    background-size: contain;
    border: 1px solid #acc0ec;
    display: block!important;
    vertical-align: middle;
    border-style: none;
}


.btn-text{
    height: 50px;
}

.carousel-image.d-block{
    height: 100%;
    width: 100%;
    background-size: contain;
    border: 1px solid #acc0ec;
}

.carousel-inner{
    border: 1px solid #0f1e3e;
}


.carousel#carouselExampleIndicators{
    height: 50%;
}

.navBar{
    background-color: #193367;
}

.gray1{
    background-color: #989898;
}

.empty-200-row{
    height: 200px;
}

.empty-150-row{
    height: 150px;
}

.empty-100-row{
    height: 100px;
}

.empty-75-row{
    height: 75px;
}

.empty-50-row{
    height: 50px;
}

.empty-40-row{
    height: 40px;
}


.empty-30-row{
    height: 30px;
}

.empty-25-row{
    height: 25px;
}

.empty-20-row{
    height: 20px;
}

.empty-15-row{
    height: 15px;
}

.empty-10-row{
    height: 10px;
}

.empty-5-row{
    height: 5px;
}

.carousel-background{
    background-color: #F0F0F0;
}

.button-height{
    height: 75px;
}

.carousel-indicators li {
    display: inline-block;
    width: 40px;
    height: 5px;
    background-color: #F5F5F5;
    box-shadow: inset 1px 1px 1px 1px rgba(0,0,0,0.5);
}
.carousel-indicators .active {
    width: 40px;
    height: 5px;
    background-color: #696969;
}


.carousel-control-next-icon,
.carousel-control-prev-icon {
  background-image: none;
  color: red;
  font-size: 20px;
}

footer{
    background-color: #BEBEBE;
    height: 220px;
}

